Fix mobile tag wrap

--- a/assets/stylesheets/previews_mobile.scss
+++ b/assets/stylesheets/previews_mobile.scss
@@ -48,6 +48,8 @@
   .discourse-tags {
     float: initial;
     clear: initial;
+    margin-right: 30px;
+    flex-wrap: wrap;
   }
 }
 
